# 2026-05-14-readme-doctor

./: README.md  pyproject.toml
docs/: daily-checkins.md
src/: readme_doctor.py
