[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "readme-doctor"
version = "0.1.0"
description = "Check README.md files for a beginner-friendly structure."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "readme-doctor contributors" }]
keywords = ["readme", "markdown", "docs", "cli", "github"]

[project.scripts]
readme-doctor = "readme_doctor:main"

[tool.setuptools]
py-modules = ["readme_doctor"]

[tool.setuptools.package-dir]
"" = "src"

